--- a/back/package.json
+++ b/back/package.json
@@ -17,16 +17,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
-    "google-auth-library": "^8.7.0",
-    "mongoose": "^6.9.1",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^6.9.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-ws": "^3.0.1",
-    "@types/multer": "^1.4.7",
     "@types/node": "^18.13.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
